# practice-01-descriptive-statistics-sconezipsa

./: .gitignore  README copy.md  practice_01.ipynb  practice_01_assignment_answer.ipynb  practice_01_assignment_jsy.ipynb  practice_02.ipynb  practice_02_assignment_answer.ipynb  practice_02_assignment_jsy.ipynb  practice_03.ipynb  practice_03_assignment_jsy.ipynb  practice_comprehensive_jsy.ipynb  pyproject.toml
